feat: skeleton auth structure

--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -80,7 +80,7 @@ source: {
 
 ### `repository`
 
-External source representing a remote git repository URL (e.g., <https://github.com/nuxt/content>).
+External source representing a remote git repository URL (e.g., <https://github.com/nuxt/content>). Only supports downloading from Github and Bitbucket by default, unless `cloneRepository` is set.
 
 When defining an external source you must also define the `include` option.
 `include` pattern is essential for the module to know which files to use for the collection.
@@ -101,27 +101,103 @@ export default defineContentConfig({
 })
 ```
 
-### `authToken`
+### `cloneRepository`
+This option allows for shallow-cloning any Git repository (`git clone --depth=1`), with an optional Git reference. Enabling this to `true` will clone the repository at build-time, and work as normal.
 
-Authentication token for private repositories (e.g., GitHub personal access token).
+```js
+export default defineContentConfig({
+  collections: {
+    docs: defineCollection({
+      type: 'page',
+      source: {
+        repository: 'https://github.com/nuxt/content',
+        include: 'docs/content/**',
+        cloneRepository: true
+      },
+    })
+  }
+})
+```
+
+#### `ref`
+Declares the Git branch or tag the content source downloads from.
+```js
+export default defineContentConfig({
+  collections: {
+    docs: defineCollection({
+      type: 'page',
+      source: {
+        repository: 'https://github.com/nuxt/content',
+        include: 'docs/content/**',
+        cloneRepository: true,
+        ref: {
+          branch: "main"
+          // tag: "v4.0.0"
+          // commit: "4e5ade"
+        }
+      },
+    })
+  }
+})
+```
+
+### `authentication`
+Manages authentication for private repositories. Can either provide an object for basic authentication (user/password), or an authentication token.
 
 ::warning{icon="i-lucide-shield-alert"}
 Never commit authentication tokens or credentials directly in your code. Use environment variables or other secure methods to provide these values at runtime.
 ::
 
-### `authBasic`
+#### `username` & `password`
+A basic authentication configuration for private repositories (e.g. Bitbucket username and password).
+```js
+export default defineContentConfig({
+  collections: {
+    docs: defineCollection({
+      type: 'page',
+      source: {
+        repository: 'https://bitbucket.org/user/repo',
+        authBasic: {
+          username: 'username',
+          password: 'password',
+        }
+      },
+    })
+  }
+})
+```
 
-Basic authentication for private repositories (e.g., Bitbucket username and password).
+#### `authToken`
+Authentication token for private repositories (e.g., Github Personal Access Token). Recommended for Github [Personal Access Tokens](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens), and Bitbucket [API Tokens](https://support.atlassian.com/bitbucket-cloud/docs/using-api-tokens/).
+```js
+export default defineContentConfig({
+  collections: {
+    docs: defineCollection({
+      type: 'page',
+      source: {
+        repository: 'https://github.com/user/repo',
+        authToken: {
+          // Note: providing a username is *optional* for Github.
+          username: "octocat",
+          authToken: "ghp_TOKENHERE"
+        }
+      },
+    })
+  }
+})
+```
+If your provider does not need a username, you can simply declare `authToken` as a string.
 
-```ts
-defineCollection({
-  type: 'page',
-  source: {
-    repository: 'https://bitbucket.org/username/repo',
-    authBasic: {
-      username: 'username',
-      password: 'password',
-    },
-  },
+```js
+export default defineContentConfig({
+  collections: {
+    docs: defineCollection({
+      type: 'page',
+      source: {
+        repository: 'https://github.com/user/repo',
+        authToken: "ghp_TOKENHERE"
+      },
+    })
+  }
 })
 ```
