docs: refactor headings

--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -119,7 +119,7 @@ export default defineContentConfig({
 })
 ```
 
-#### `ref`
+### `ref`
 Declares the Git branch or tag the content source downloads from.
 ```js
 export default defineContentConfig({
@@ -141,15 +141,14 @@ export default defineContentConfig({
 })
 ```
 
-### `authentication`
-Manages authentication for private repositories. Can either provide an object for basic authentication (user/password), or an authentication token.
+
+### `authBasic`
+A basic authentication configuration for private repositories (e.g. Bitbucket username and password).
 
 ::warning{icon="i-lucide-shield-alert"}
-Never commit authentication tokens or credentials directly in your code. Use environment variables or other secure methods to provide these values at runtime.
+Never commit Git provider credentials directly in your code. Use environment variables or other secure methods to provide these values at runtime.
 ::
 
-#### `username` & `password`
-A basic authentication configuration for private repositories (e.g. Bitbucket username and password).
 ```js
 export default defineContentConfig({
   collections: {
@@ -167,8 +166,12 @@ export default defineContentConfig({
 })
 ```
 
-#### `authToken`
+### `authToken`
 Authentication token for private repositories (e.g., Github Personal Access Token). Recommended for Github [Personal Access Tokens](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens), and Bitbucket [API Tokens](https://support.atlassian.com/bitbucket-cloud/docs/using-api-tokens/).
+
+::warning{icon="i-lucide-shield-alert"}
+Never commit authentication tokens directly in your code. Use environment variables or other secure methods to provide these values at runtime.
+::
 ```js
 export default defineContentConfig({
   collections: {
