docs: elaborate on `ref` support

--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -120,7 +120,7 @@ export default defineContentConfig({
 ```
 
 ### `ref`
-Declares the Git branch or tag the content source downloads from.
+Declares the Git branch or tag the content source downloads from. Only supported when `cloneRepository` is true.
 ```js
 export default defineContentConfig({
   collections: {
