Fix typo in Dockerfile lock file name

--- a/docs/content/docs/6.deploy/9.docker.md
+++ b/docs/content/docs/6.deploy/9.docker.md
@@ -56,7 +56,7 @@ If you like to use Bun, you can use the official Bun image. Here is an example D
 FROM oven/bun:1 AS build
 WORKDIR /app
 
-COPY package.json bun.lockb ./
+COPY package.json bun.lock ./
 
 # use ignore-scripts to avoid builting node modules like better-sqlite3
 RUN bun install --frozen-lockfile --ignore-scripts
