feat: sql dump encryption

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -492,6 +492,26 @@ preview: {
 }
 ```
 
+
+## `encryption`
+
+Nuxt Content v3 can optionally **encrypt** the prerendered content dumps so they can be hosted as public static assets (CDN, Cloudflare Pages) while remaining unreadable without a key. The browser fetches the encrypted dump, requests a short-lived key from your app (after authentication), decrypts locally, then hydrates the WASM SQLite database.
+
+### `content.encryption`
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    encryption: {
+      enabled: true,            // turn on encrypted dumps + key endpoint
+      masterKey: process.env.NUXT_CONTENT_MASTER_KEY, // base64(32 bytes)
+    }
+  }
+})
+```
+
+If `masterKey` is omitted, a random 32-byte key is generated at build time and kept on the server.
+
 ## `experimental`
 
 Experimental features that are not yet stable.
