feat: prepare to publish as @ripka/content

--- a/docs/content/blog/v3.md
+++ b/docs/content/blog/v3.md
@@ -71,7 +71,7 @@ You can now define collections in the [`content.config.ts`](/docs/getting-starte
 Schemas enforce consistency within collections and improve TypeScript typings for better integration with Nuxt Content utilities.
 
 ```ts [content.config.ts]
-import { defineCollection, z } from '@nuxt/content'
+import { defineCollection, z } from '@ripka/content'
 
 // Export collections
 export const collections = {
