--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -37,7 +37,7 @@ The new API is backed by SQL and content queries happens within a specific colle
 
 ### Types
 
-- `import type { NavItem } from '@nuxt/content/dist/runtime/types'` is replaced with `import type { ContentNavigationItem } from '@nuxt/content'`
+- `import type { NavItem } from '@ripka/content/dist/runtime/types'` is replaced with `import type { ContentNavigationItem } from '@ripka/content'`
 
 ### General
 
@@ -63,7 +63,7 @@ export default defineNuxtConfig({
 })
 ```
 
-- In order to keep the [app config file](/docs/studio/config) updatable from Studio we just need to update the helper import of the `nuxt.schema.ts` file from `@nuxthq/studio/theme` to `@nuxt/content/preview`.
+- In order to keep the [app config file](/docs/studio/config) updatable from Studio we just need to update the helper import of the `nuxt.schema.ts` file from `@nuxthq/studio/theme` to `@ripka/content/preview`.
 
 ## Implement Document Driven mode in v3
 
