--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -8,7 +8,7 @@ description: Learn how to import your files in Nuxt Content collections.
 Nuxt Content provides several ways to import content files into your collection. You can configure the source by using the `source` property within `defineCollection`:
 
 ```ts [content.config.ts]
-import { defineCollection, defineContentConfig } from '@nuxt/content'
+import { defineCollection, defineContentConfig } from '@ripka/content'
 
 export default defineContentConfig({
   collections: {
@@ -86,7 +86,7 @@ When defining an external source you must also define the `include` option.
 `include` pattern is essential for the module to know which files to use for the collection.
 
 ```js
-import { defineCollection, defineContentConfig } from '@nuxt/content'
+import { defineCollection, defineContentConfig } from '@ripka/content'
 
 export default defineContentConfig({
   collections: {
