--- a/docs/content/docs/2.collections/5.inherit-schema-from-component.md
+++ b/docs/content/docs/2.collections/5.inherit-schema-from-component.md
@@ -18,7 +18,7 @@ Under the hood, Nuxt Content reads the component's props (via `nuxt-component-me
 ## Example
 
 ```ts [content.config.ts]
-import { defineContentConfig, defineCollection, z, property } from '@nuxt/content'
+import { defineContentConfig, defineCollection, z, property } from '@ripka/content'
 
 export default defineContentConfig({
   collections: {
