--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -9,7 +9,7 @@ description: Create and query Markdown files in your Nuxt applications and use
 ### Define a Collection
 
 ```ts [content.config.ts]
-import { defineCollection, defineContentConfig, z } from '@nuxt/content'
+import { defineCollection, defineContentConfig, z } from '@ripka/content'
 
 export default defineContentConfig({
   collections: {
@@ -524,7 +524,7 @@ Content excerpt or summary can be extracted from the content using `<!--more-->`
 title: Introduction
 ---
 
-Learn how to use `@nuxt/content`.
+Learn how to use `@ripka/content`.
 
 <!--more-->
 
