--- a/docs/content/docs/4.utils/2.query-collection-navigation.md
+++ b/docs/content/docs/4.utils/2.query-collection-navigation.md
@@ -155,7 +155,7 @@ Returns the headline (name of the parent folder) for a given path within a navig
 **Example:**
 
 ```ts
-import { findPageHeadline } from '@nuxt/content/utils'
+import { findPageHeadline } from '@ripka/content/utils'
 
 const headline = findPageHeadline(navigation, '/docs/guide/getting-started')
 // headline is a string that contains the name of the parent folder
@@ -174,7 +174,7 @@ Returns the breadcrumb trail (array of navigation items) for a given path within
 **Example:**
 
 ```ts
-import { findPageBreadcrumb } from '@nuxt/content/utils'
+import { findPageBreadcrumb } from '@ripka/content/utils'
 
 const breadcrumb = findPageBreadcrumb(navigation, '/docs/guide/getting-started')
 // breadcrumb is an array of navigation items leading to the current page
@@ -193,7 +193,7 @@ Finds and returns the direct children of a given path in the navigation tree.
 **Example:**
 
 ```ts
-import { findPageChildren } from '@nuxt/content/utils'
+import { findPageChildren } from '@ripka/content/utils'
 
 const children = findPageChildren(navigation, '/docs/guide')
 // children is an array of navigation items under '/docs/guide'
@@ -213,7 +213,7 @@ Returns the sibling navigation items for a given path (i.e., other items with th
 **Example:**
 
 ```ts
-import { findPageSiblings } from '@nuxt/content/utils'
+import { findPageSiblings } from '@ripka/content/utils'
 
 const siblings = findPageSiblings(navigation, '/docs/guide/getting-started')
 // siblings is an array of navigation items that share the same parent as the current page
