--- a/docs/content/docs/7.integrations/02.llms.md
+++ b/docs/content/docs/7.integrations/02.llms.md
@@ -19,7 +19,7 @@ npm install nuxt-llms
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  modules: ['@nuxt/content', 'nuxt-llms'],
+  modules: ['@ripka/content', 'nuxt-llms'],
   llms: {
     domain: 'https://your-site.com',
     title: 'Your Site Name',
