--- a/docs/content/docs/8.advanced/8.transformers.md
+++ b/docs/content/docs/8.advanced/8.transformers.md
@@ -12,10 +12,10 @@ Transformers in Nuxt Content allow you to programmatically parse, modify, or ana
 
 ## Defining a Transformer
 
-You can define a transformer using the `defineTransformer` helper from `@nuxt/content`:
+You can define a transformer using the `defineTransformer` helper from `@ripka/content`:
 
 ```ts [~~/transformers/title-suffix.ts]
-import { defineTransformer } from '@nuxt/content'
+import { defineTransformer } from '@ripka/content'
 
 export default defineTransformer({
   name: 'title-suffix',
@@ -58,7 +58,7 @@ export default defineNuxtConfig({
 Transformers can add a `__metadata` field to the file. This field is not stored in the database but can be used for runtime logic.
 
 ```ts [~~/transformers/component-metadata.ts]
-import { defineTransformer } from '@nuxt/content'
+import { defineTransformer } from '@ripka/content'
 
 export default defineTransformer({
   name: 'component-metadata',
@@ -101,7 +101,7 @@ Transformers are not limited to modifying existing content—they can also be us
 Suppose you want to support `.yml` and `.yaml` files in your content directory. You can create a transformer that parses YAML frontmatter and body, and registers it for those extensions:
 
 ```ts [~~/transformers/yaml.ts]
-import { defineTransformer } from '@nuxt/content'
+import { defineTransformer } from '@ripka/content'
 
 export default defineTransformer({
   name: 'Yaml',
