--- a/docs/content/docs/2.collections/4.validators.md
+++ b/docs/content/docs/2.collections/4.validators.md
@@ -21,7 +21,7 @@ npm i -D zod zod-to-json-schema
 Prefer importing `z` directly from `zod`.
 
 ```ts [content.config.ts]
-import { defineContentConfig, defineCollection, property } from '@nuxt/content'
+import { defineContentConfig, defineCollection, property } from '@ripka/content'
 import { z } from 'zod' // or 'zod/v3' if your setup exposes this subpath
 
 export default defineContentConfig({
@@ -50,7 +50,7 @@ Dates are serialised as ISO strings under the hood (JSON Schema `format: date-ti
 ::
 
 ::warning
-The `z` re-export from `@nuxt/content` is deprecated and will be removed in a future release. Import `z` from `zod` (or `zod/v3`) instead.
+The `z` re-export from `@ripka/content` is deprecated and will be removed in a future release. Import `z` from `zod` (or `zod/v3`) instead.
 ::
 
 ## Using Zod v4
@@ -66,7 +66,7 @@ npm i -D zod
 ```
 
 ```ts [content.config.ts]
-import { defineContentConfig, defineCollection, property } from '@nuxt/content'
+import { defineContentConfig, defineCollection, property } from '@ripka/content'
 import { z } from 'zod/v4'
 
 export default defineContentConfig({
@@ -102,7 +102,7 @@ npm i -D valibot @valibot/to-json-schema
 ```
 
 ```ts [content.config.ts]
-import { defineContentConfig, defineCollection, property } from '@nuxt/content'
+import { defineContentConfig, defineCollection, property } from '@ripka/content'
 import { object, string, boolean, array, date, optional } from 'valibot'
 
 export default defineContentConfig({
