Revert "feat: prepare to publish as @ripka/content"
This reverts commit 148101db3b673bdce47ec6f763d55da989d07b0a.

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -9,19 +9,19 @@ Choose your preferred package manager to install Nuxt Content v3:
 
 ::code-group
 ```bash [pnpm]
-pnpm add @ripka/content
+pnpm add @nuxt/content
 ```
 
 ```bash [yarn]
-yarn add @ripka/content
+yarn add @nuxt/content
 ```
 
 ```bash [npm]
-npm install @ripka/content
+npm install @nuxt/content
 ```
 
 ```bash [bun]
-bun add @ripka/content
+bun add @nuxt/content
 ```
 ::
 
@@ -31,13 +31,13 @@ Add the Nuxt Content module to your `nuxt.config.ts`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  modules: ['@ripka/content']
+  modules: ['@nuxt/content']
 })
 ```
 
 ### Automatic Setup
 
-When starting a new Nuxt project with the `create-nuxt` CLI, you can simply select `@ripka/content` from the interactive module selector. This will automatically install and register the module for you.
+When starting a new Nuxt project with the `create-nuxt` CLI, you can simply select `@nuxt/content` from the interactive module selector. This will automatically install and register the module for you.
 
 ::code-group
 ```bash [npm]
@@ -76,7 +76,7 @@ Checkout [`experimental.nativeSqlite` configuration](/docs/getting-started/confi
 Create a `content.config.ts` file in your project root directory:
 
 ```ts [content.config.ts]
-import { defineContentConfig, defineCollection } from '@ripka/content'
+import { defineContentConfig, defineCollection } from '@nuxt/content'
 
 export default defineContentConfig({
   collections: {
