--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -271,7 +271,7 @@ export default defineNuxtConfig({
 ```
 
 ```ts [~/transformers/title-suffix.ts]
-import { defineTransformer } from '@ripka/content'
+import { defineTransformer } from '@nuxt/content'
 
 export default defineTransformer({
   name: 'title-suffix',
