--- a/docs/content/docs/2.collections/1.define.md
+++ b/docs/content/docs/2.collections/1.define.md
@@ -32,7 +32,7 @@ Create a `content.config.ts` file in your project's root directory. This special
 Here's a basic example:
 
 ```ts [content.config.ts]
-import { defineCollection, defineContentConfig } from '@ripka/content'
+import { defineCollection, defineContentConfig } from '@nuxt/content'
 
 export default defineContentConfig({
   collections: {
@@ -59,7 +59,7 @@ Schemas enforce data consistency within a collection and serve as the source of 
 On top of the built-in fields, you can define a schema by adding the `schema` property to your collection by using a [`zod`](https://zod.dev) schema:
 
 ```ts [content.config.ts]
-import { defineCollection, defineContentConfig, z } from '@ripka/content'
+import { defineCollection, defineContentConfig, z } from '@nuxt/content'
 
 export default defineContentConfig({
   collections: {
@@ -78,7 +78,7 @@ export default defineContentConfig({
 ```
 
 ::note
-`@ripka/content` exposes a `z` object that contains a set of Zod schemas for common data types. Check [Zod’s README](https://github.com/colinhacks/zod) for complete documentation on how Zod works and what features are available.
+`@nuxt/content` exposes a `z` object that contains a set of Zod schemas for common data types. Check [Zod’s README](https://github.com/colinhacks/zod) for complete documentation on how Zod works and what features are available.
 ::
 
 ::tip
