--- a/docs/content/docs/6.deploy/2.serverless.md
+++ b/docs/content/docs/6.deploy/2.serverless.md
@@ -56,7 +56,7 @@ export default defineNuxtConfig({
 // 1. Create a LibSQL database on Turso.tech
 // 2. And add the `TURSO_DATABASE_URL` and `TURSO_AUTH_TOKEN` env variables
 export default defineNuxtConfig({
-  modules: ['@ripka/content'],
+  modules: ['@nuxt/content'],
   content: {
     database: {
       type: 'libsql',
@@ -70,7 +70,7 @@ export default defineNuxtConfig({
 ```ts [NuxtHub]
 // Install the NuxtHub module (see hub.nuxt.com)
 export default defineNuxtConfig({
-  modules: ['@ripka/content', '@nuxthub/core'],
+  modules: ['@nuxt/content', '@nuxthub/core'],
   content: {
     database: {
       type: 'd1',
@@ -112,7 +112,7 @@ If you wish to deploy to AWS Lambda or Azure Static Web Apps, you need to make s
 
 ```ts
 export default defineNuxtConfig({
-  modules: ['@ripka/content'],
+  modules: ['@nuxt/content'],
   content: {
     database: {
       type: 'sqlite',
