--- a/docs/content/docs/7.integrations/01.i18n.md
+++ b/docs/content/docs/7.integrations/01.i18n.md
@@ -18,7 +18,7 @@ npm install @nuxtjs/i18n
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  modules: ['@ripka/content', '@nuxtjs/i18n'],
+  modules: ['@nuxt/content', '@nuxtjs/i18n'],
   i18n: {
     locales: [
       { code: 'en', name: 'English', language: 'en-US', dir: 'ltr' },
@@ -78,7 +78,7 @@ Create a catch-all page that fetches content based on the current locale:
 ```vue [pages/\[...slug\].vue]
 <script setup lang="ts">
 import { withLeadingSlash } from 'ufo'
-import type { Collections } from '@ripka/content'
+import type { Collections } from '@nuxt/content'
 
 const route = useRoute()
 const { locale } = useI18n()
