--- a/docs/content/docs/8.advanced/6.custom-source.md
+++ b/docs/content/docs/8.advanced/6.custom-source.md
@@ -8,7 +8,7 @@ By default, Nuxt Content provides some built-in sources like local files source 
 Using `defineCollectionSource`, you can define a custom source.
 
 ```ts
-import { defineCollectionSource } from '@ripka/content'
+import { defineCollectionSource } from '@nuxt/content'
 
 const hackernewsSource = defineCollectionSource({
   getKeys: () => {
@@ -27,7 +27,7 @@ const hackernewsSource = defineCollectionSource({
 Then you can use this source in your collections.
 
 ```ts [content.config.ts]
-import { defineContentConfig, defineCollectionSource, defineCollection, z } from '@ripka/content'
+import { defineContentConfig, defineCollectionSource, defineCollection, z } from '@nuxt/content'
 
 const hackernewsSource = defineCollectionSource({
   getKeys: () => {
