--- a/docs/content/docs/9.studio/5.config.md
+++ b/docs/content/docs/9.studio/5.config.md
@@ -37,7 +37,7 @@ Those helpers are provided by the Nuxt Content `Preview API`.
 - The `field` method allows you to customize inputs (aka leaf).
 
 ```ts [nuxt.schema.ts]
-import { field, group } from '@ripka/content/preview'
+import { field, group } from '@nuxt/content/preview'
 
 export default defineNuxtSchema({
   appConfig: {
@@ -80,7 +80,7 @@ Based on these values, the Studio UI will adapt to display the appropriate input
 Text can be displayed as a select instead on a classical input if you provide a `required` key in the `field()` method:
 
 ```ts [nuxt.schema.ts]
-import { field, group } from '@ripka/content/preview'
+import { field, group } from '@nuxt/content/preview'
 
 export default defineNuxtSchema({
   appConfig: {
