--- a/docs/content/docs/3.files/3.json.md
+++ b/docs/content/docs/3.files/3.json.md
@@ -6,7 +6,7 @@ description: How to define, write and query JSON data.
 ## Define Collection
 
 ```ts [content.config.ts]
-import { defineCollection, defineContentConfig, z } from '@ripka/content'
+import { defineCollection, defineContentConfig, z } from '@nuxt/content'
 
 export default defineContentConfig({
   collections: {
