docs: add documentation for repository object type, remove gh/bitbucket source

--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -80,7 +80,7 @@ source: {
 
 ### `repository`
 
-External source representing a remote git repository URL (e.g., <https://github.com/nuxt/content>). Only supports downloading from Github and Bitbucket by default, unless `cloneRepository` is set.
+External source representing a remote git repository URL (e.g., <https://github.com/nuxt/content>), or an object containing Git branch / tag information, or optionally authentication
 
 When defining an external source you must also define the `include` option.
 `include` pattern is essential for the module to know which files to use for the collection.
@@ -101,105 +101,92 @@ export default defineContentConfig({
 })
 ```
 
-### `cloneRepository`
-This option allows for shallow-cloning any Git repository (`git clone --depth=1`), with an optional Git reference. Enabling this to `true` will clone the repository at build-time, and work as normal.
+#### `branch` / `tag`
+This option allows for cloning a Git repository by its tag or branch.
+
+**Example:**
+If you want to clone by a tag, make the `repository` attribute an object, with the `url` of your repository, and set the `tag` attribute.
 
 ```js
+import { defineCollection, defineContentConfig } from '@nuxt/content'
+
 export default defineContentConfig({
   collections: {
     docs: defineCollection({
       type: 'page',
       source: {
-        repository: 'https://github.com/nuxt/content',
+        repository: {
+          url: 'https://github.com/nuxt/content',
+          tag: 'v1'
+        },
         include: 'docs/content/**',
-        cloneRepository: true
       },
     })
   }
 })
 ```
 
-### `ref`
-Declares the Git branch or tag the content source downloads from. Only supported when `cloneRepository` is true.
+**Example:**
+
+If you want to clone by a remote branch, make the `repository` attribute an object, with the `url` of your repository, and set the `branch` attribute.
+
+
 ```js
+import { defineCollection, defineContentConfig } from '@nuxt/content'
+
 export default defineContentConfig({
   collections: {
     docs: defineCollection({
       type: 'page',
       source: {
-        repository: 'https://github.com/nuxt/content',
+        repository: {
+          url: 'https://github.com/nuxt/content',
+          branch: 'dev'
+        },
         include: 'docs/content/**',
-        cloneRepository: true,
-        ref: {
-          branch: "main"
-          // tag: "v4.0.0"
-        }
       },
     })
   }
 })
 ```
 
+#### `auth`
+This option allows for basic and token-based authentication for Git repositories.
 
-### `authBasic`
-A basic authentication configuration for private repositories (e.g. Bitbucket username and password).
+::warning{icon="i-lucide-shield-alert"} Never commit authentication tokens or credentials directly in your code. Use environment variables or other secure methods to provide these values at runtime. ::
 
-::warning{icon="i-lucide-shield-alert"}
-Never commit Git provider credentials directly in your code. Use environment variables or other secure methods to provide these values at runtime.
-::
+**Example:**
 
-```js
-export default defineContentConfig({
-  collections: {
-    docs: defineCollection({
-      type: 'page',
-      source: {
-        repository: 'https://bitbucket.org/user/repo',
-        authBasic: {
-          username: 'username',
-          password: 'password',
-        }
+If you want to use basic authentication (e.g. for BitBucket repositories), you can use:
+```ts
+defineCollection({
+  type: 'page',
+  source: {
+    repository: {
+      url: 'https://bitbucket.org/username/repo',
+      auth: {
+        username: 'username',
+        password: 'password',
       },
-    })
-  }
+    },
+  },
 })
 ```
 
-### `authToken`
-Authentication token for private repositories (e.g., Github Personal Access Token). Recommended for Github [Personal Access Tokens](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens), and Bitbucket [API Tokens](https://support.atlassian.com/bitbucket-cloud/docs/using-api-tokens/).
+**Example:**
 
-::warning{icon="i-lucide-shield-alert"}
-Never commit authentication tokens directly in your code. Use environment variables or other secure methods to provide these values at runtime.
-::
-```js
-export default defineContentConfig({
-  collections: {
-    docs: defineCollection({
-      type: 'page',
-      source: {
-        repository: 'https://github.com/user/repo',
-        authToken: {
-          // Note: providing a username is *optional* for Github.
-          username: "octocat",
-          authToken: "ghp_TOKENHERE"
-        }
+If you need to use authentication tokens (e.g. for Github, Gitlab, some Forgejo providers), you can do the following:
+```ts
+defineCollection({
+  type: 'page',
+  source: {
+    repository: {
+      url: 'https://github.com/username/repo',
+      auth: {
+        username: 'username',
+        token: 'password',
       },
-    })
-  }
-})
-```
-If your provider does not need a username, you can simply declare `authToken` as a string.
-
-```js
-export default defineContentConfig({
-  collections: {
-    docs: defineCollection({
-      type: 'page',
-      source: {
-        repository: 'https://github.com/user/repo',
-        authToken: "ghp_TOKENHERE"
-      },
-    })
-  }
+    },
+  },
 })
 ```
