chore: remove ui pro occurences

--- a/docs/content/docs/8.advanced/1.fulltext-search.md
+++ b/docs/content/docs/8.advanced/1.fulltext-search.md
@@ -5,9 +5,9 @@ description: Implement full-text search in your website using Nuxt Content
 
 Content module exposes a handy utility [`queryCollectionSearchSections`](/docs/utils/query-collection-search-sections) to break down content files into searchable sections. This is useful for implementing full-text search in your website. You can use the result of this utility in combination with [Nuxt UI Content Search](https://ui.nuxt.com/pro/components/content-search) or other search libraries like [Fuse.js](https://fusejs.io/), [minisearch](https://lucaong.github.io/minisearch), etc.
 
-## Nuxt UI Pro
+## Nuxt UI
 
-Nuxt UI Pro provides a ready to use component for full-text search. You can use it by passing the result of `queryCollectionSearchSections` to the `files` prop of the component.
+Nuxt UI provides a ready to use component for full-text search. You can use it by passing the result of `queryCollectionSearchSections` to the `files` prop of the component.
 
 Read more about [Nuxt UI Content Search](https://ui.nuxt.com/pro/components/content-search).
 
