--- a/docs/content/docs/9.studio/5.config.md
+++ b/docs/content/docs/9.studio/5.config.md
@@ -131,7 +131,7 @@ export default defineNuxtSchema({
       gray: field({ ... }),
       icons: group({
         title: 'Icons',
-        description: 'Manage icons used in UI Pro.',
+        description: 'Manage icons used in UI.',
         icon: 'i-mdi-application-settings-outline',
         fields: {
           search: field({ ...}),
@@ -150,8 +150,4 @@ export default defineNuxtSchema({
 
 ::tip{to="/docs/studio/debug"}
 Take a look at this section to validate your schema in local development.
-::
-
-::tip{to="https://github.com/nuxt-ui-pro/docs/blob/main/nuxt.schema.ts"}
-For a practical example, take a look at the schema we've developed for the UI Pro Docs starter.
 ::
