--- a/examples/i18n/package.json
+++ b/examples/i18n/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@nuxt/content": "latest",
-    "@nuxt/ui-pro": "^3.3.3",
+    "@nuxt/ui": "^4.0.0",
     "@nuxthub/core": "0.9.0",
     "@nuxtjs/i18n": "^10.1.0",
     "nuxt": "^4.1.1"
