--- a/docs/content/docs/8.advanced/6.custom-source.md
+++ b/docs/content/docs/8.advanced/6.custom-source.md
@@ -27,7 +27,8 @@ const hackernewsSource = defineCollectionSource({
 Then you can use this source in your collections.
 
 ```ts [content.config.ts]
-import { defineContentConfig, defineCollectionSource, defineCollection, z } from '@nuxt/content'
+import { defineContentConfig, defineCollectionSource, defineCollection } from '@nuxt/content'
+import { z } from 'zod'
 
 const hackernewsSource = defineCollectionSource({
   getKeys: () => {
