--- a/docs/content/docs/9.studio/3.content.md
+++ b/docs/content/docs/9.studio/3.content.md
@@ -175,11 +175,11 @@ export default defineContentConfig({
         category: z.enum(['Alps', 'Himalaya', 'Pyrenees']).optional(),
         date: z.date(),
         image: z.object({
-          src: z.string().editor({ input: 'media' }),
+          src: property(z.string()).editor({ input: 'media' }),
           alt: z.string(),
         }),
-        slug: z.string().editor({ hidden: true }),
-        icon: z.string().optional().editor({ input: 'icon' }),
+        slug: property(z.string()).editor({ hidden: true }),
+        icon: property(z.string().optional()).editor({ input: 'icon' }),
         authors: z.array(z.object({
           slug: z.string(),
           username: z.string(),
@@ -225,10 +225,10 @@ This allows you to define custom inputs or hide fields.
 
 ```ts [content.config.ts]
 // Icon
-icon: z.string().editor({ input: 'icon', iconLibraries: ['lucide', 'simple-icons'] })
+icon: property(z.string()).editor({ input: 'icon', iconLibraries: ['lucide', 'simple-icons'] })
 
 // Media
-image: z.string().editor({ input: 'media' })
+image: property(z.string()).editor({ input: 'media' })
 ```
 
 #### Options
