--- a/docs/content/docs/8.advanced/2.raw-content.md
+++ b/docs/content/docs/8.advanced/2.raw-content.md
@@ -11,7 +11,8 @@ Nuxt Content will detect this magical field in your schema and fill it with the 
 
 ```ts [content.config.ts]
 
-import { defineCollection, defineContentConfig, z } from '@nuxt/content'
+import { defineCollection, defineContentConfig } from '@nuxt/content'
+import { z } from 'zod'
 
 export default defineContentConfig({
   collections: {
