feat: add clearContentClientStorage as helper to clear clientStorage. eg. on logout

--- a/docs/content/docs/8.advanced/9.private.md
+++ b/docs/content/docs/8.advanced/9.private.md
@@ -63,6 +63,28 @@ Nuxt Content automatically provides endpoints for both **encrypted** and **unenc
 
 When a dump has been decrypted once, the client can cache the derived key locally (keyed by `kid`). On subsequent loads, the cached key is tried first to allow reading content while offline. If it fails (e.g. after a redeploy with a new checksum), the client discards it and requests a fresh key.
 
+## Clearing cached dumps on logout
+
+When a user signs out you should clear any cached dumps and derived encryption keys stored in the browser. Nuxt Content exposes a helper that wipes the in-memory SQLite database and any related `localStorage` entries:
+
+```ts [logout.ts]
+import { clearContentClientStorage } from '#imports'
+
+export async function logout() {
+  // ...perform your logout logic
+
+  await clearContentClientStorage()
+}
+```
+
+Pass an explicit list of collections if you only need to invalidate a subset:
+
+```ts [logout.ts]
+await clearContentClientStorage({
+  collections: ['course_private']
+})
+```
+
 ## Enable encryption
 
 ```ts [nuxt.config.ts]
