docs: use comma instead of pipe for proper syntax
The pipe `|` character is not proper to allow for both file types

--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -161,7 +161,7 @@ In Content v3, we renamed `_dir.yml` to `.navigation.yml`. The new name better r
 Module uses these files to gather information about directories for generating navigation.
 
 Note that in order to make these files available for Module, you should define your collection's source in
-a way that includes these files. For example `source: '**'` and `source: '**/*.{md|yml}'` will include these files
+a way that includes these files. For example `source: '**'` and `source: '**/*.{md,yml}'` will include these files
 in collection, but `source: '**/*.md'` will not include them.
 
 
