feat: add support for nuxthub v1

--- a/docs/content/docs/6.deploy/2.serverless.md
+++ b/docs/content/docs/6.deploy/2.serverless.md
@@ -32,7 +32,7 @@ Before deploying your project, you need to select a database service:
 export default defineNuxtConfig({
   content: {
     database: {
-      type: 'postgres',
+      type: 'postgresql',
       url: process.env.POSTGRES_URL
     }
   }
