--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -327,21 +327,21 @@ export default defineNuxtConfig({
 
 ### `Postgres`
 
-If you plan to deploy your application using PostgreSQL database you need to use the `postgres` database adapter.
+If you plan to deploy your application using PostgreSQL database you need to use the `postgresql` database adapter.
 
 First, make sure to install the `pg` package:
 
 ```bash [Terminal]
-npx npm i pg
+npm i pg
 ```
 
-Then, configure the `postgres` adapter in your `nuxt.config.ts`:
+Then, configure the `postgresql` adapter in your `nuxt.config.ts`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   content: {
     database: {
-      type: 'postgres',
+      type: 'postgresql',
       url: process.env.POSTGRES_URL,
       /* Other options for `pg` */
     }
@@ -356,7 +356,7 @@ If you plan to deploy your application using a LibSQL database you need to use t
 First, make sure to install the `@libsql/client` package:
 
 ```bash [Terminal]
-npx npm i @libsql/client
+npm i @libsql/client
 ```
 
 Then, configure the `libsql` adapter in your `nuxt.config.ts`:
@@ -375,6 +375,33 @@ export default defineNuxtConfig({
 
 ::note
 The most popular LibSQL hosting services is [Turso](https://turso.tech/).
+::
+
+### `PGlite`
+
+If you plan to deploy your application using a PGlite database you need to use the `pglite` database adapter.
+
+First, make sure to install the `@electric-sql/pglite` package:
+
+```bash [Terminal]
+npm i @electric-sql/pglite
+```
+
+Then, configure the `pglite` adapter in your `nuxt.config.ts`:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    database: {
+      type: 'pglite',
+      dataDir: '.data/content/pglite'
+    }
+  }
+})
+```
+
+::note
+We recommend to only use PGlite in development.
 ::
 
 ## `renderer`
